OCT-1264 Change Allocate tiles disabled state colours

--- a/client/src/components/ui/InputText/InputText.module.scss
+++ b/client/src/components/ui/InputText/InputText.module.scss
@@ -67,7 +67,7 @@
         }
 
         &.isDisabled {
-          background: $color-octant-grey8;
+          color: $color-octant-grey5;
         }
 
         &::placeholder {
