--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -25,4 +25,5 @@ $color-octant-orange: #ff6157;
 $color-octant-orange2: #ff9601;
 $color-octant-orange3: #f6c54b;
 $color-octant-orange4: #ffefee;
+$color-octant-orange5: #f7d2cc;
 $color-octant-purple: #685b8a;
