OCT-1001: Implement Loader for buttons & inputs as in styleguide

--- a/client/src/components/ui/Button/Button.module.scss
+++ b/client/src/components/ui/Button/Button.module.scss
@@ -33,6 +33,14 @@ $paddingVertical: 1rem;
     cursor: default;
   }
 
+  &.isLoading {
+    .isIconVariant {
+      svg circle {
+        fill: transparent;
+      }
+    }
+  }
+
   &.hasHoverState:hover {
     transform: scale(1.03);
     transition: all $transition-time-4 ease-out;
