--- a/client/src/components/ui/Loader/Loader.module.scss
+++ b/client/src/components/ui/Loader/Loader.module.scss
@@ -1,8 +1,41 @@
 .root {
-  border: 0.2rem solid $color-octant-green4;
-  border-top-color: $color-octant-green;
-  border-radius: 50%;
-  width: 2.2rem;
-  height: 2.2rem;
-  animation: spin 2s linear infinite;
+  width: 3.2rem;
+  height: 3.2rem;
+
+  .circleLoader,
+  .circleLoaderBackground {
+    stroke-width: 0.3rem;
+    fill: transparent;
+    stroke: $color-octant-green;
+    stroke-linejoin: round;
+    color: transparent;
+  }
+
+  .circleLoaderBackground {
+    opacity: 0.2;
+  }
+
+  &.variant--small {
+    width: 1.6rem;
+    height: 1.6rem;
+
+    .circleLoader,
+    .circleLoaderBackground {
+      stroke-width: 0.2rem;
+    }
+  }
+
+  &.color--white {
+    .circleLoader,
+    .circleLoaderBackground {
+      stroke: $color-white;
+    }
+  }
+
+  &.color--grey {
+    .circleLoader,
+    .circleLoaderBackground {
+      stroke: $color-octant-grey2;
+    }
+  }
 }
