--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -1,5 +1,6 @@
 $border-radius-standard: 0.5rem;
 $border-radius-04: 0.4rem;
+$border-radius-06: 0.6rem;
 $border-radius-08: 0.8rem;
 $border-radius-10: 1rem;
 $border-radius-16: 1.6rem;
