--- a/client/src/components/Metrics/MetricsProjectsList/MetricsProjectsList.module.scss
+++ b/client/src/components/Metrics/MetricsProjectsList/MetricsProjectsList.module.scss
@@ -1,12 +1,22 @@
 .root {
-  border-top: 0.1rem solid $color-octant-grey3;
   max-height: 100%;
   overflow: hidden;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0.1rem;
+    background-color: $color-octant-grey3;
+  }
 
   .projectsList {
     padding: 0 3.8rem 0rem 2.4rem;
     max-height: 100%;
-    overflow: scroll;
+    overflow: auto;
     margin-right: 0.8rem;
   }
 }
