OCT-1239 Implement Allocate V3: allow removal of projects that user previously allocated to

--- a/client/src/components/shared/ButtonAddToAllocate/ButtonAddToAllocate.module.scss
+++ b/client/src/components/shared/ButtonAddToAllocate/ButtonAddToAllocate.module.scss
@@ -1,6 +1,13 @@
 .root {
   z-index: $z-index-4;
 
+  &.isAllocatedTo {
+    svg path {
+      stroke: $color-white;
+      // fill: $color-white; -- no fill here, it makes the stroke bigger.
+    }
+  }
+
   &:not(.isAllocatedTo) {
     &.isAddedToAllocate {
       svg path {
