--- a/client/src/styles/utils/_mixins.scss
+++ b/client/src/styles/utils/_mixins.scss
@@ -32,7 +32,7 @@
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: calc(
-    #{calc(100 / $elementsCount)}% - #{calc($gutterSize * ($elementsCount - 1) / $elementsCount)}
+    #{calc(100% / $elementsCount)} - #{calc($gutterSize * ($elementsCount - 1) / $elementsCount)}
   );
 }
 
