--- a/client/src/components/shared/Layout/Layout.module.scss
+++ b/client/src/components/shared/Layout/Layout.module.scss
@@ -68,9 +68,10 @@ $bodyPaddingTopDesktop: calc(2.4rem + $headerMarginTop + $headerHeight);
   }
 }
 
-.logoWrapper {
+.logo {
   position: relative;
   height: 4rem;
+  cursor: pointer;
 }
 
 .testnetIndicatorWrapper {
