--- a/client/src/components/Earn/EarnHistory/EarnHistoryList/EarnHistoryList.module.scss
+++ b/client/src/components/Earn/EarnHistory/EarnHistoryList/EarnHistoryList.module.scss
@@ -1,5 +1,6 @@
 .emptyHistoryInfo {
   height: 7.2rem;
+  padding: 0 $historyHorizontalPadding;
   display: flex;
   align-items: center;
   color: $color-octant-grey5;
