--- a/client/src/components/Proposals/ProposalsList/ProposalsList.module.scss
+++ b/client/src/components/Proposals/ProposalsList/ProposalsList.module.scss
@@ -27,7 +27,7 @@ $elementMargin: 1.6rem;
   font-size: $font-size-16;
   font-weight: $font-weight-bold;
   border-radius: $border-radius-16;
-  margin: 1.6rem 0;
+  margin:  0 0 1.6rem;
 
   .epochDurationLabel {
     color: $color-octant-grey5;
@@ -47,9 +47,5 @@ $elementMargin: 1.6rem;
   width: 100%;
   height: 0.1rem;
   background-color: $color-octant-grey1;
-  margin: 1.6rem 0;
-
-  &.isFirstArchive {
-    margin-top: 0;
-  }
+  margin:  0 0 1.6rem;
 }
