--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -21,6 +21,8 @@ $color-octant-green2: #5b8a81;
 $color-octant-green3: #1d4558;
 $color-octant-green4: #d1e7e3; // TODO OCT-1001 Remove this color. It will become unused.
 $color-octant-green5: #f1faf8;
+$color-octant-green6: #d3e9e4;
+$color-octant-green7: #c0d9d4;
 $color-octant-orange: #ff6157;
 $color-octant-orange2: #ff9601;
 $color-octant-orange3: #f6c54b;
